[gd_scene load_steps=7 format=3 uid="uid://dx36la2n8ki1a"]

[ext_resource type="Script" path="res://Scenes/UI/HUD/weapon_display.gd" id="1_3j20v"]
[ext_resource type="Texture2D" uid="uid://b5y6pyihgs2fg" path="res://icon.svg" id="1_cj8pm"]
[ext_resource type="Script" path="res://Scenes/UI/HUD/ammo_bar.gd" id="3_c2op0"]

[sub_resource type="Gradient" id="Gradient_7xg3p"]
offsets = PackedFloat32Array(0)
colors = PackedColorArray(0.0846899, 0.0846899, 0.0846899, 1)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_twinj"]
gradient = SubResource("Gradient_7xg3p")

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_srsln"]

[node name="WeaponDisplay" type="Control"]
layout_mode = 3
anchors_preset = 0
offset_right = 166.0
offset_bottom = 53.0
scale = Vector2(0.7, 0.7)
script = ExtResource("1_3j20v")

[node name="AmmoBar" type="TextureProgressBar" parent="."]
layout_mode = 0
offset_top = -39.0
offset_right = 261.0
offset_bottom = 52.0
value = 70.0
nine_patch_stretch = true
texture_under = SubResource("GradientTexture1D_twinj")
texture_progress = ExtResource("1_cj8pm")
tint_under = Color(0.737193, 0.737193, 0.737193, 0.521569)
script = ExtResource("3_c2op0")

[node name="Button" type="Button" parent="."]
layout_mode = 1
offset_top = -39.0
offset_right = 260.0
offset_bottom = 50.0
focus_mode = 0
theme_override_styles/focus = SubResource("StyleBoxEmpty_srsln")
theme_override_styles/disabled_mirrored = SubResource("StyleBoxEmpty_srsln")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_srsln")
theme_override_styles/hover_pressed_mirrored = SubResource("StyleBoxEmpty_srsln")
theme_override_styles/hover_pressed = SubResource("StyleBoxEmpty_srsln")
theme_override_styles/hover_mirrored = SubResource("StyleBoxEmpty_srsln")
theme_override_styles/hover = SubResource("StyleBoxEmpty_srsln")
theme_override_styles/pressed_mirrored = SubResource("StyleBoxEmpty_srsln")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_srsln")
theme_override_styles/normal_mirrored = SubResource("StyleBoxEmpty_srsln")
theme_override_styles/normal = SubResource("StyleBoxEmpty_srsln")

[node name="Highlight" type="ColorRect" parent="."]
visible = false
layout_mode = 0
offset_top = -34.0
offset_right = 259.0
offset_bottom = 53.0
mouse_filter = 1
color = Color(1, 0.792157, 0.615686, 0.345098)

[connection signal="pressed" from="Button" to="." method="_on_button_pressed"]
